# LibraWave

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  rxconfig.py
backend/: manage.py
backend/ZenithVault/: asgi.py  settings.py  urls.py  wsgi.py
backend/contents/: admin.py  urls.py
backend/contents/migrations/: 0001_initial.py  0002_contenttype_filecontent_textcontent_and_more.py  0003_contentfilerelation_content_file_contents_and_more.py
backend/contents/models/: __init__.py  content.py  content_model.py  content_type.py  file_content.py  metadata.py  text_content.py
backend/contents/serializers/: __init__.py  content.py  content_serializer.py  content_type.py  metadata.py
backend/contents/views/: __init__.py  content.py  content_type.py  metadata.py
backend/librewave/: asgi.py  settings.py  urls.py  wsgi.py
backend/profile/: admin.py  apps.py  serializers.py  urls.py  views.py
backend/profile/migrations/: 0001_initial.py
backend/profile/models/: __init__.py  reading_progress.py  user_profile.py
backend/reading_progress/: apps.py
librewave/: rxconfig.py
librewave/apps/: apps.py
librewave/apps/content/application/: content_manager.py
librewave/apps/content/domain/: __init__.py  models.py  services.py
librewave/apps/content/infrastructure/: database.py  repositories.py
librewave/apps/content/presentation/: state.py
librewave/apps/content/presentation/components/: __init__.py  card.py  form.py
librewave/apps/content/presentation/pages/: __init__.py  pages.py
